[package]
name = "lnurl-examples"
version = "0.1.0"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"

[dependencies]
hyper = "0.13.0-alpha.4"
dotenv = "0.9.0"
env_logger = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.1"
serde_json = "1.0.41"
tokio = "0.2.0-alpha.6"
tokio-executor = "=0.2.0-alpha.6"
tokio-io = "=0.2.0-alpha.6"
tokio-sync = "=0.2.0-alpha.6"
